--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+* {
+    font-family: 'Inconsolata', monospace;
+}
 html, body {
     height: 100%;
-    background-color: white;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; 
+    background-color: #f7f6f1;
 }
 
 canvas[resize] {
@@ -23,8 +25,4 @@ h2 {
 h6 {
     margin: 0px;
     padding-top: 5px;
-}
-
-#katex {
-
 }
